# Bot_Rust

./: Cargo.toml  prepararEstrategia_Rust.py  pyproject.toml  test_excel_read.py  test_market_data.py
src/: lib.rs
